force-app/main/default/objects/Person_Account_Profiling__c/fields/Consent_for_Marketing_RA__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Marketing_RA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent for Marketing (RA)</label>
    <type>Checkbox</type>
</CustomField>