force-app/main/default/objects/Person_Account_Profiling__c/fields/mc_RecordType__c.field-meta.xml
<CustomField>
    <fullName>mc_RecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mc RecordType</label>
    <type>Text</type>
</CustomField>