force-app/main/default/objects/Person_Account_Profiling__c/fields/Person_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Id__c</fullName>
    <formula>CASESAFEID(Account__r.Id)</formula>
    <label>Person Account Id</label>
    <type>Text</type>
</CustomField>