force-app/main/default/objects/Person_Account_Profiling__c/fields/Person_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_Id__c</fullName>
    <formula>CASESAFEID(Account__r.PersonContact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact Id</label>
    <type>Text</type>
</CustomField>