force-app/main/default/objects/Person_Account_Profiling__c/recordTypes/CCL_Person_Account_Profiling_RT.recordType-meta.xml
<RecordType>
    <fullName>CCL_Person_Account_Profiling_RT</fullName>
    <active>true</active>
    <description>For Leasing</description>
    <label>CCL Person Account Profiling RT</label>
</RecordType>