force-app/main/default/objects/Person_Account_Profiling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Person_Contact_Id__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>List_of_Profilings__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Person_Account_Profiling__c.RA_Person_Account_Profiling_RT</value>
    </filters>
    <label>All</label>
</ListView>